styling in place

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">iop</h2>
+        <h2 class="card-title">Michael Scott</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: iop</li>
-            <li class="list-group-item">Email: <a href="mailto:iop@iop.cp">iop@iop.cp</a></li>
-            <li class="list-group-item">Office number: iop</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
+            <li class="list-group-item">Office number: 1</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">ghj</h2>
+        <h2 class="card-title">Dwight K. Schrute</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ghj</li>
-            <li class="list-group-item">Email: <a href="mailto:ghj@hjk.ci">ghj@hjk.ci</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/hjk" target="_blank" rel="noopener noreferrer">hjk</a></li>
+            <li class="list-group-item">ID: Top Secret</li>
+            <li class="list-group-item">Email: <a href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dkschrute" target="_blank" rel="noopener noreferrer">dkschrute</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">bnm</h2>
+        <h2 class="card-title">Ryan Howard</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: bnm</li>
-            <li class="list-group-item">Email: <a href="mailto:bnm@bnm.co">bnm@bnm.co</a></li>
-            <li class="list-group-item">School: nm,</li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:ryan@dundermifflin.com">ryan@dundermifflin.com</a></li>
+            <li class="list-group-item">School: University of Scranton</li>
         </ul>
     </div>
 </div>
