--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -1,71 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Team</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
-            </div>
+      <div class="row">
+        <div class="col-12 jumbotron mb-3 team-heading">
+          <h1 class="text-center">My Team</h1>
         </div>
+      </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Michael Scott</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
-            <li class="list-group-item">Office number: 1</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Dwight K. Schrute</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: Top Secret</li>
-            <li class="list-group-item">Email: <a href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/dkschrute" target="_blank" rel="noopener noreferrer">dkschrute</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Ryan Howard</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:ryan@dundermifflin.com">ryan@dundermifflin.com</a></li>
-            <li class="list-group-item">School: University of Scranton</li>
-        </ul>
-    </div>
-</div>
-
+      <div class="row">
+        <div class="team-area col-12 d-flex justify-content-center">
+          <div class="card employee-card">
+            <div class="card-header">
+              <h2 class="card-title">Michael Scott</h2>
+              <h3 class="card-title">
+                <i class="fas fa-mug-hot mr-2"></i>Manager
+              </h3>
             </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: 1</li>
+                <li class="list-group-item">
+                  Email:
+                  <a href="mailto:michael@dundermifflin.com"
+                    >michael@dundermifflin.com</a
+                  >
+                </li>
+                <li class="list-group-item">Office number: 1</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card employee-card">
+            <div class="card-header">
+              <h2 class="card-title">Dwight K. Schrute</h2>
+              <h3 class="card-title">
+                <i class="fas fa-glasses mr-2"></i>Engineer
+              </h3>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: Top Secret</li>
+                <li class="list-group-item">
+                  Email:
+                  <a href="mailto:dwight@dundermifflin.com"
+                    >dwight@dundermifflin.com</a
+                  >
+                </li>
+                <li class="list-group-item">
+                  GitHub:
+                  <a
+                    href="https://github.com/dkschrute"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >dkschrute</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="card employee-card">
+            <div class="card-header">
+              <h2 class="card-title">Ryan Howard</h2>
+              <h3 class="card-title">
+                <i class="fas fa-user-graduate mr-2"></i>Intern
+              </h3>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">ID: 2</li>
+                <li class="list-group-item">
+                  Email:
+                  <a href="mailto:ryan@dundermifflin.com"
+                    >ryan@dundermifflin.com</a
+                  >
+                </li>
+                <li class="list-group-item">School: University of Scranton</li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
